--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Custom Programming Language</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="html.pngo">
   <script defer src="script.js"></script>
 </head>
 
