--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Custom Programming Language</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="line.css">
   <link rel="shortcut icon" type="image/x-icon" href="html.png">
   <script defer src="script.js"></script>
 </head>
@@ -13,6 +14,9 @@
   <textarea id="code"></textarea>
   <br>
   <button id="run">Run!</button>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="line.js"></script>
 </body>
 
 </html>
