--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <textarea id="code"></textarea>
+  <textarea id="code" class="lined"></textarea>
   <br>
   <button id="run">Run!</button>
   
