--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-  <textarea id="code" class="lined"></textarea>
-  <br>
   <button id="run">Run!</button>
+  <wbr>
+  <textarea id="code" class="lined" rows="500" cols="100"></textarea>
+  
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="line.js"></script>
