--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <button id="run">Run!</button>
+  <p><i><b>PROTIP:</b> Need more lines to code with? Just keep typing and they'll appear for you!</i></p>
   <wbr>
   <textarea id="code" class="lined" rows="500" cols="100"></textarea>
   
