--- a/index.html
+++ b/index.html
@@ -11,10 +11,29 @@
 </head>
 
 <body>
-  <button id="run">Run!</button>
-  <p><i><b>PROTIP:</b> Need more lines to code with? Just keep typing and they'll appear for you!</i></p>
-  <wbr>
-  <textarea id="code" class="lined" rows="500" cols="100"></textarea>
+  <header>
+    <h1>Custom Programming Language</h1>
+    <p><i>No need for documentation! It's in the default code below!</i></p>
+  </header>
+  
+  <hr>
+  
+  <main>
+    <button id="run">Run!</button>
+    <p><i><b>PROTIP:</b> Need more lines to code with? Just keep typing and they'll appear for you!</i></p>
+    
+    <wbr>
+    
+    <textarea id="code" class="lined" rows="500" cols="100"></textarea>
+  </main>
+  
+  <hr>
+  
+  <footer>
+    <nav>
+      <a href="https://github.com/JavascriptLearner815/custom-programming-language" target="_blank">GitHub</a>
+    </nav>
+  </footer>
   
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
