--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
   <header>
     <h1>Custom Programming Language</h1>
-    <p><i>No need for documentation! It's in the default code below!</i></p>
+    <p><i>Documentation is a thing of the past</i></p>
+    <nav>
+      <a href="https://github.com/JavascriptLearner815/custom-programming-language" target="_blank">GitHub</a>
+      <a href="https://github.com/JavascriptLearner815/custom-programming-language/wiki" target="_blank">Ugh, Fine, Here's Ugly Documentation</a>
+    </nav>
   </header>
   
   <hr>
@@ -30,9 +34,7 @@
   <hr>
   
   <footer>
-    <nav>
-      <a href="https://github.com/JavascriptLearner815/custom-programming-language" target="_blank">GitHub</a>
-    </nav>
+    <p>© SpeedoThreeSixty (Dean Alan Summer) 2021. This Project Is Under The MIT License. For Unofficial Use Only. All Rights Reserved.</p>
   </footer>
   
   
