--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p><i>Documentation is a thing of the past</i></p>
     <nav>
       <a href="https://github.com/JavascriptLearner815/custom-programming-language" target="_blank">GitHub</a>
+      <a href="https://github.com/JavascriptLearner815/custom-programming-language/discussions/1" target="_blank">Discussions</a>
       <a href="https://github.com/JavascriptLearner815/custom-programming-language/wiki" target="_blank">Ugh, Fine, Here's Ugly Documentation</a>
     </nav>
   </header>
